# zak-guard

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/zak_guard/: __init__.py  cli.py  rules.py  scanner.py
tests/: test_rules.py  test_scanner.py
tests/fixtures/: allowlist.txt  clean_file.py  fake_secrets.env  fake_secrets.py
