[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "zak-guard"
version = "0.1.0"
description = "Pre-commit secret scanner: catches AWS keys, GitHub PATs, Stripe tokens, private keys, and more before they hit your repo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Zak Molloy", email = "zakguard@proton.me" }]
keywords = ["pre-commit", "security", "secrets", "git", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
zak-guard = "zak_guard.cli:main"

[project.urls]
Homepage = "https://github.com/molloyzak13/zak-guard"
Repository = "https://github.com/molloyzak13/zak-guard"
Issues = "https://github.com/molloyzak13/zak-guard/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "build>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
